--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
             <version>1.4.16</version>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>jnewsdk-mer</groupId>
             <artifactId>jnewsdk-mer</artifactId>
             <version>1.0.1</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -27,6 +27,13 @@
             <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.9.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
