配置文件外置,增加文件内容加载

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,25 @@
             </plugin>
 
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <copydir src="${project.basedir}/config"
+                                         dest="${project.basedir}/target/config" forceoverwrite="true"/>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 
 
 
