增加注释,修改bug

--- a/config/server.properties
+++ b/config/server.properties
@@ -1,1 +1,5 @@
-packageScanPath=org.spring.springboot.dubbo
+#需要拦截的包路径,默认为全扫
+package_scan_path=org.spring.springboot.dubbo
+
+#用户应用项目名
+application_code=niuB_app
